--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,11 @@
             <artifactId>neo4j</artifactId>
             <version>${neo4j.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-spatial-index</artifactId>
-            <version>${neo4j.version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.neo4j</groupId>-->
+<!--            <artifactId>neo4j-spatial-index</artifactId>-->
+<!--            <version>${neo4j.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts-core</artifactId>
@@ -178,13 +178,6 @@
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-<!--                    <archive>-->
-<!--                        <manifest>-->
-<!--                            <mainClass>-->
-<!--                                com.orangereading.stardict.App-->
-<!--                            </mainClass>-->
-<!--                        </manifest>-->
-<!--                    </archive>-->
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
