--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </properties>
     <groupId>org.wowtools</groupId>
     <artifactId>neo4j-rtree</artifactId>
-    <version>2.0.2</version>
+    <version>2.1.0-SNAPSHOT</version>
     <name>neo4j-rtree</name>
 
     <description>a spatial index for neo4j 4.x.</description>
@@ -50,12 +50,17 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${neo4j.version}</version>
-            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.locationtech.jts</groupId>
-            <artifactId>jts-core</artifactId>
-            <version>1.17.1</version>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver</artifactId>
+            <version>${neo4j.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.wowtools</groupId>
+            <artifactId>giscat-vector-pojo</artifactId>
+            <version>1.3.0-STABLE</version>
         </dependency>
 
         <dependency>
