--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     </properties>
     <groupId>org.wowtools</groupId>
     <artifactId>neo4j-rtree</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
     <name>neo4j-rtree</name>
 
     <description>a spatial index for neo4j 4.x.</description>
