--- a/pom.xml
+++ b/pom.xml
@@ -4,15 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <properties>
-        <neo4j.version>4.1.0</neo4j.version>
-        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
-        <maven.compiler.target>11</maven.compiler.target>
-        <maven.compiler.source>11</maven.compiler.source>
+        <neo4j.version>5.12.0</neo4j.version>
+        <java.version>21</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+        <target.java.version>${java.version}</target.java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <groupId>org.wowtools</groupId>
     <artifactId>neo4j-rtree</artifactId>
-    <version>2.1.0</version>
+    <version>neo4j5-2.1.0</version>
     <name>neo4j-rtree</name>
 
     <description>a spatial index for neo4j 4.x.</description>
@@ -47,6 +50,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.4.14</version>
+        </dependency>
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${neo4j.version}</version>
@@ -60,7 +79,7 @@
         <dependency>
             <groupId>org.wowtools</groupId>
             <artifactId>giscat-vector-pojo</artifactId>
-            <version>1.3.0-STABLE</version>
+            <version>g1.7.0</version>
         </dependency>
 
         <dependency>
@@ -86,7 +105,7 @@
         <profile>
             <id>release</id>
             <activation>
-                <jdk>[11,)</jdk>
+                <jdk>[21,)</jdk>
             </activation>
             <properties>
             </properties>
@@ -125,7 +144,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <!--                    <detectJavaApiLink>false</detectJavaApiLink>-->
-                    <javadocVersion>11</javadocVersion>
+                    <javadocVersion>21</javadocVersion>
                     <tags>
                         <tag>
                             <name>date</name>
