--- a/src/test/resources/neo4j.conf
+++ b/src/test/resources/neo4j.conf
@@ -9,7 +9,7 @@
 #dbms.active_database=graph.db
 
 # Paths of directories in the installation.
-dbms.directories.data=d:/_tmp/iuweywuhqwey87u
+dbms.directories.data=d:/tmp/iuweywuhqwey87u
 #dbms.directories.plugins=plugins
 #dbms.directories.certificates=certificates
 #dbms.directories.logs=logs
